# yolodev-jsonnet

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
crates/astexplorer/: Cargo.toml
crates/astexplorer/src/: describe.rs  lib.rs
crates/core-lang/: Cargo.toml
crates/core-lang/src/: ast.rs  core_ast.rs  desugar.rs  format.rs  lib.rs  lowering.rs  to_tokens.rs
crates/core-lang/src/desugar/: binding.rs
crates/core-lang/src/format/: expr.rs
crates/core-lang/src/lowering/: binding.rs
crates/core-lang/test_data/inline/ok/: 0006_assert_with_message.golden  0006_assert_with_message.jsonnet  0009_error_expr.golden  0021_in_super_expr.golden  0021_in_super_expr.jsonnet  0026_local_expr_multiple.golden  0030_obj_comp_with_comma.golden  0033_object_apply_expr.jsonnet  0036_slice_expr_all.jsonnet  0038_slice_expr_from_step.jsonnet  0041_slice_expr_step.jsonnet  0045_super_ident.golden
crates/core-lang/test_data/ok/: 0001_apply_expr.golden  0001_apply_expr.jsonnet  0002_arr_comp_long.golden  0002_arr_comp_long.jsonnet  0004_arr_comp_without_comma.golden  0005_assert_simple.golden  0007_block_string_expr.golden  0008_computed_member_expr.golden  0008_computed_member_expr.jsonnet  0011_function_expr.golden  0012_function_named_arg.golden  0012_function_named_arg.jsonnet  0013_function_positional_arg.golden  0013_function_positional_arg.jsonnet  0015_ident_expr.golden  0015_ident_expr.jsonnet  0016_ident_member_expr.jsonnet  0018_if_then_expr.golden  0022_index_expr.golden  0022_index_expr.jsonnet  0023_index_expr_num.golden  0023_index_expr_num.jsonnet  0024_local_expr_fun_multiple.golden  0025_local_expr_fun_single.golden  0027_local_expr_single.golden  0032_object_apply_comp_expr.golden  0032_object_apply_comp_expr.jsonnet  0033_object_apply_expr.golden  0033_object_apply_expr.jsonnet  0034_root_expr.golden  0034_root_expr.jsonnet  0036_slice_expr_all.golden  0036_slice_expr_all.jsonnet  0037_slice_expr_from.golden  0037_slice_expr_from.jsonnet  0038_slice_expr_from_step.golden  0038_slice_expr_from_step.jsonnet  0039_slice_expr_from_to.golden  0039_slice_expr_from_to.jsonnet  0040_slice_expr_from_to_step.golden  (+9 more)
crates/eval/: Cargo.toml
crates/eval/src/: engine.rs  expr.rs  fun.rs  helpers.rs  lazy.rs  lib.rs  runtime.rs  val.rs
crates/lex/: Cargo.toml  build.rs
crates/lex/src/: lib.rs  op.rs  str_block.rs  unescape.rs
crates/lex/test_data/inline/ok/: 0001_false_expr.golden  0001_function_named_arg.golden  0002_function_expr.golden  0002_obj_comp_with_comma.golden  0003_function_expr.golden  0003_if_then_expr.golden  0004_ident_member_expr.golden  0005_block_string_expr.golden  0005_block_string_expr.jsonnet  0005_unary_expr_multiple.golden  0006_arr_comp_with_comma.golden  0006_obj_comp_without_comma.golden  0006_obj_comp_without_comma.jsonnet  0007_assert_with_message.golden  0007_super_computed.golden  0007_unary_expr.golden  0008_error_expr.golden  0008_obj_comp_with_comma.jsonnet  0009_false_expr.golden  0009_local_expr_fun_multiple.golden  0010_local_expr_multiple.golden  0010_obj_comp_with_comma.golden  0011_function_named_arg.jsonnet  0011_if_then_else_expr.golden  0011_self_expr.golden  0012_function_positional_arg.golden  0012_importstr_expr.golden  0013_assert_simple.golden  0013_assert_simple.jsonnet  0013_string_expr.golden  0014_assert_with_message.golden  0015_local_expr_fun_multiple.jsonnet  0015_local_expr_fun_single.golden  0015_local_expr_fun_single.jsonnet  0016_if_then_else_expr.golden  0016_local_expr_single.golden  0017_computed_member_expr.golden  0017_computed_member_expr.jsonnet  0017_in_super_expr.golden  0018_unary_expr.golden  (+43 more)
crates/parse/: Cargo.toml
crates/stdlib/: Cargo.toml
crates/stdlib/src/: lib.rs  stdlib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  lib.rs  parse.rs  syntax_error.rs  syntax_node.rs
crates/syntax/src/ast/: nodes.rs  tokens.rs  traits.rs
crates/syntax/src/ast/tokens/: gen.rs
crates/syntax/src/parse/: lex.rs  token_sink.rs  token_source.rs
crates/syntax/test_data/inline/err/: 0001_super_missing_field.golden
crates/syntax/test_data/inline/ok/: 0001_arr_comp_without_comma.golden  0001_function_named_arg.golden  0002_arr_comp_with_comma.golden  0002_in_super_expr.golden  0002_obj_comp_with_comma.golden  0003_arr_comp_without_comma.golden  0004_super_ident.golden  0005_block_string_expr.golden  0007_assert_with_message.golden  0009_importstr_expr.golden  0009_importstr_expr.jsonnet  0010_function_expr.golden  0010_function_expr.jsonnet  0010_local_expr_multiple.golden  0011_self_expr.golden  0012_function_positional_arg.golden  0015_local_expr_fun_multiple.golden  0016_if_then_else_expr.golden  0017_computed_member_expr.golden  0018_null_expr.golden  0019_ident_expr.golden  0019_string_expr.golden  0020_assert_simple.golden  0020_if_then_expr.golden  0021_ident_member_expr.golden  0021_index_expr.golden  0022_false_expr.golden  0022_index_expr_num.golden  0023_true_expr.golden  0024_verbatim_string_expr.golden  0025_local_expr_single.golden  0026_unary_expr.golden  0026_unary_expr_multiple.golden  0028_apply_expr.golden  0028_apply_expr.jsonnet  0028_import_expr.golden  0028_number_expr.golden  0029_local_expr_fun_single.golden  0029_obj_comp_with_comma.golden  0030_obj_comp_without_comma.golden  (+23 more)
src/: ast.rs  core.rs  lex.rs  lib.rs  parse.rs  parse_old.rs  utils.rs
src/ast/: binding.rs  core.rs  full.rs  punctuated.rs
src/core/: binder.rs
src/lex/: error.rs  span.rs  token.rs
src/parse/: buffer.rs  error.rs  loc.rs  lookahead.rs
src/utils/: arena.rs  intern.rs  print.rs
test-cases/core/: arr-comp-if-tail.golden  arr-comp-if-tail.jsonnet  arr-comp-simple.golden  arr-comp-simple.jsonnet  arr-comp.golden  arr-comp.jsonnet  obj-apply.golden  obj-apply.jsonnet  obj-apply2.golden  obj-apply2.jsonnet  (+4 more)
xtask/: Cargo.toml  jsonnet.ungram
xtask/src/: ast_src.rs  codegen.rs  lib.rs  main.rs  pre_commit.rs  shell.rs
xtask/src/codegen/: gen_parser_tests.rs  gen_syntax.rs  stdlib.rs
(+16 files in other folders)
