[package]
name = "yolodev-jsonnet"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
derive-new = "0.5"
displaydoc = "0.1"
hashbrown = "0.7"
id-arena = "2"
logos = "0.11"
smallvec = "1"
static_assertions = "1"
thiserror = "1"

[dev-dependencies]
test-case = "1"
