[package]
name = "xtask"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
walkdir = "2"
pico-args = "0.3"
quote = "1"
proc-macro2 = "1"
anyhow = "1"
