[package]
name = "xtask"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
anyhow = "1"
pico-args = "0.3"
proc-macro2 = "1"
quote = "1"
ungrammar = "1"
walkdir = "2"

jsonnet-core-lang = { version = "0.1.0", path = "../crates/core-lang", features = ["to-tokens"] }
jsonnet-syntax = { version = "0.1.0", path = "../crates/syntax" }
