[package]
name = "jsonnet-astexplorer"
version = "0.1.5"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/yolodev-jsonnet/"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

jsonnet-syntax = { version = "0.1.0", path = "../syntax" }
jsonnet-core-lang = { version = "0.1.0", path = "../core-lang" }

