[package]
name = "jsonnet-core-lang"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
paste = "0.1"

jsonnet-syntax = { version = "0.1.0", path = "../syntax" }
