[package]
name = "jsonnet-core-lang"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
dtoa = { version = "0.4.5", optional = true }
paste = "0.1"
pretty = { version = "0.10", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }

jsonnet-syntax = { version = "0.1.0", path = "../syntax" }

[dev-dependencies]
test-case = "1"
pretty_assertions = "0.6"
test-gen = { version = "0.1", path = "../../build/test-gen" }

[features]
default = []

# NOTE: display feature requires std
display = ["pretty", "dtoa"]
to-tokens = ["quote", "proc-macro2", "dtoa"]
