[package]
name = "jsonnet-stdlib"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonnet-core-lang = { version = "0.1.0", path = "../core-lang" }
